--- a/src/main/resources/static/addRect.html
+++ b/src/main/resources/static/addRect.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Rectangle</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container-fluid">
+		<div class="row justify-content-center">
+			<div class="col-md-4">
+				<h1 class="text-center mt-5 mb-4">Add a New Rectangle</h1>
+				<form action="/addRectangle" method="post">
+                    <div class="d-grid gap-2">
+                        <input type="text" id="name" name="name" class="form-control form-control-lg" placeholder="Name">
+                        <input type="number" id="width" name="width" class="form-control form-control-lg" placeholder="Width">
+                        <input type="number" id="height" name="height" class="form-control form-control-lg" placeholder="Height">
+                        <input type="color" id="color" name="color" value="#ff0000" style="height:50px" class="w-100 form-control form-control-color">
+                    </div>
+                    <div class="d-grid mt-3">
+                        <input class="btn btn-primary" type="submit" value="Add"></input>
+                    </div>
+				</form>
+                <div class="d-grid mt-3">
+                    <a class="btn btn-primary" href="/rectangles" role="button">Main Page</a>
+                </div>  
+			</div>
+		</div>  
+	</div>
 </body>
 </html>
