--- a/src/main/resources/static/addRect.html
+++ b/src/main/resources/static/addRect.html
@@ -11,7 +11,7 @@
 		<div class="row justify-content-center">
 			<div class="col-md-4">
 				<h1 class="text-center mt-5 mb-4">Add a New Rectangle</h1>
-				<form action="/addRectangle" method="post">
+				<form action="/rectangles/add" method="post">
                     <div class="d-grid gap-2">
                         <input type="text" id="name" name="name" class="form-control form-control-lg" placeholder="Name">
                         <input type="number" id="width" name="width" class="form-control form-control-lg" placeholder="Width">
